experiments/cpp-locks/report.txt
#0
main.cpp:79: error: Atomicity Violation
  Atomicity Violation! - Functions 'Test::f1' and 'Test::f2' should be called atomically.
  77. 	void test_violations(void)
  78. 	{
  79. 		f1(); f2(); // (f1, f2)
              ^
  80. 	}
  81. };

Found 1 issue
                      Issue Type(ISSUED_TYPE_ID): #
  Atomicity Violation(ATOMICITY_VIOLATION_ERROR): 1
